# Football-Analytics-with-Deep-Learning-and-Computer-Vision

./: README.md  requirements.txt
cpp/: .gitignore  ALL_TOOLS_README.md  API_SERVER_GUIDE.md  CMakeLists.txt  CONFIG_REFERENCE.md  CURRENT_STATUS_AND_FIXES.md  DEBUG_API_400.md  FIX_400_QUICK_GUIDE.md  FIX_CUDA_ERROR.md  GPU_ACCELERATION.md  GPU_SETUP_GUIDE.md  GPU_USAGE_SUMMARY.md  HTTPLIB_SETUP.md  INSTALL_LINUX.md  INSTALL_WINDOWS.md  JSON_ESCAPE_FIX.md  LINUX_QUICKSTART.md  MODEL_CONVERT_GUIDE.md  ONNX_TROUBLESHOOTING.md  PLATFORM_COMPARISON.md  QUICKSTART.md  QUICK_FIX.md  README.md  SOLVING_400_ERROR.md  VIEW_FULL_JSON.md  build.bat  build_linux.sh  check_dependencies.ps1  convert_models.py  convert_models_en.py  diagnose_onnx.ps1  download_httplib.ps1  example_api_server.py  fix_onnx.ps1  install_deps_linux.sh  quick_test_api.bat  rebuild.bat  rebuild_gpu.sh  run_test_linux.sh  run_with_gpu.sh  (+7 more)
cpp/config/: config_pitch.json  config_players.json  inference.json  pitch_map_labels.json
cpp/include/: ApiClient.h  CoordinateTransform.h  TeamPredictor.h  VideoReader.h  YOLODetector.h
cpp/src/: ApiClient.cpp  CoordinateTransform.cpp  TeamPredictor.cpp  VideoReader.cpp  YOLODetector.cpp  main.cpp
